# sigil

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
src/cli/: add.rs  args.rs  get.rs  list.rs  mod.rs  remove.rs  touch.rs
src/cli/otp/: add.rs  import.rs  mod.rs  remove.rs  token.rs
src/cli/password/: add.rs  generate.rs  get.rs  mod.rs  remove.rs
src/lib/: error.rs  mod.rs  otp.rs  types.rs  utils.rs
tests/: cli.sh  keygen  setup.sh
tests/inputs/: otp_rm  password_get
tests/outputs/: otp_add_hotp  password_rm
tools/: install.sh  release.sh
