[package]
name = "sigil"
version = "0.1.0"
authors = ["Alberto Coscia <alberto@albertocoscia.me>"]

[dependencies]
structopt = "0.2"
failure = "0.1"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.5"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
gpgme = "0.8"