[package]
name = "sigil"
version = "0.1.0"
authors = ["Alberto Coscia <alberto@albertocoscia.me>"]
description = "A password manager for the sneakernet"
repository = "https://github.com/ALCC01/sigil"
readme = "README.md"

[dependencies]
structopt = "0.2"
failure = "0.1"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.5"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
gpgme = "0.8"
ring = "0.13"
base32 = "0.3"
url = "1.7"
rand = "0.5"